[gd_scene load_steps=18 format=2]

[ext_resource path="res://SquareShape.tres" type="Shape2D" id=1]
[ext_resource path="res://assets/colored_transparent_packed.png" type="Texture" id=2]
[ext_resource path="res://entities/Lost.gd" type="Script" id=3]
[ext_resource path="res://assets/time8.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/bip.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/lost.png" type="Texture" id=6]
[ext_resource path="res://assets/sounds/finish.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 4 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 4 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 4 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 4 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 16, 4 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 16, 4 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 96, 0, 16, 4 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 112, 0, 16, 4 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "miss",
"speed": 0.25
} ]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 496, 336, 16, 16 )

[node name="Lost" type="Area2D"]
z_index = 1
monitorable = false
collision_layer = 2
collision_mask = 256
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = ExtResource( 1 )

[node name="Sprite2D" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="SpriteTimer" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -7 )
frames = SubResource( 10 )
animation = "miss"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0

[node name="Arrow" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -13 )
scale = Vector2( 0.5, 0.5 )
z_index = 8
texture = SubResource( 11 )

[node name="FinishPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="animation_finished" from="SpriteTimer" to="." method="_on_SpriteTimer_animation_finished"]
[connection signal="frame_changed" from="SpriteTimer" to="." method="_on_SpriteTimer_frame_changed"]
[connection signal="finished" from="FinishPlayer" to="." method="_on_FinishPlayer_finished"]
